--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,14 +12,25 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build project
+        run: npm run build
+
       - name: Deploy to server
         uses: easingthemes/ssh-deploy@v2.1.5
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           ARGS: "-avz --delete"
-          SOURCE: "/"  # Change this if you want to deploy different directory
-          REMOTE_HOST: "msalsouri.duckdns.org"  # Replace with your server's IP address
-          REMOTE_USER: "msalsouri"  # Replace with your SSH username
-          REMOTE_PORT: 2222  # Use the new port number
-          TARGET: "/var/www/html/"  # Change this if you want to deploy to a different directory
+          SOURCE: "dist/"  # Adjust this to your build output directory
+          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+          REMOTE_USER: ${{ secrets.REMOTE_USER }}
+          REMOTE_PORT: ${{ secrets.REMOTE_PORT }}
+          TARGET: ${{ secrets.REMOTE_TARGET }}
 
