--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "echo \"Building the project...\" && exit 0"
+    "build": "echo \"Building the project...\" && cp -R wp-content/* dist/"
   },
   "repository": {
     "type": "git",
