--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,11 @@ jobs:
       - name: Build the project
         run: npm run build
 
+      - name: Check dist directory
+        run: |
+          echo "Checking dist directory"
+          ls -la dist
+
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.5.3
         with:
